Completed the Roburna Dashboard
I have completed the Dashboard and it is fully responsive

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,10 @@
 @import './colors.scss';
 @import './mixins.scss';
 @import './fonts.scss';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 
 * {
   margin: 0;
@@ -25,4 +29,14 @@ a {
 ul {
   margin: 0px;
   padding: 0px;
+}
+
+
+.scrollbar-hide {
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; 
 }
